# redo-notty-launchpad

./: .gitignore  Anchor.toml  Cargo.toml  pnpm-lock.yaml
programs/notty-terminal/: Cargo.toml
programs/notty-terminal/src/: error.rs  lib.rs
programs/notty-terminal/src/instructions/: create_token.rs  initialize_global_state.rs  launch.rs  mod.rs  purchase_token.rs
programs/notty-terminal/src/state/: global_state.rs  mod.rs  token_state.rs
tests/: helpers.ts  notty-terminal.ts
